<resources>
    <string name="app_name">NoticeMe</string>
    <string name="button">Button</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="not_a_member_sign_up_now">Not a member? Sign up now</string>


    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">UserId</string>
    <string name="nav_header_subtitle">EmailId</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="for_creating_an_organization_you_will_have_to_email_the_following_details">For creating an organization you will have to email the following details:</string>
    <string name="registered_email_id">-- Registered Email Id</string>
    <string name="id_proof">-- ID Proof</string>
    <string name="organization_name">Organization Name</string>
    <string name="organization_type">Organization Type</string>
    <string name="valid_organization_proof">-- Valid Organization Proof</string>
    <string name="noticemeapp_gmail_com">NoticeMeApp@gmail.com</string>
    <string name="title_activity_main">Notice Me</string>
    <string name="naya_text_view">Naya text view</string>
    <string name="notice_title">Notice Title</string>
    <string name="noice_content">Noice Content</string>
    <string name="search_groups">Search groups...</string>

    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="gender">Gender:</string>
    <string name="age">Age:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="dob_dd_mm_yy">DOB(DD/MM/YY)</string>
    <string name="group_name">Group Name</string>
    <string name="org_name">Org Name</string>
    <string name="_00_members">00 members</string>
    <string name="hona_chahiye">hona chahiye</string>
    <string name="display_name">Display Name</string>
    <string name="email_id">Email Id</string>
    <string name="contact_no">Contact No</string>
    <string name="contact_android_string_no">contact @android:string/no</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>
    <string name="org_type">orgType</string>
    <string name="display_org_name">Organization name</string>


</resources>
