<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationForm">

    <LinearLayout
        android:layout_width="358dp"
        android:layout_height="646dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:gravity="bottom|start"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"

            android:gravity="bottom|start"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/DOB"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:gravity="bottom|start"
            android:hint="@string/dob_dd_mm_yy"
            android:inputType="textPersonName"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/contactNo"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:gravity="bottom|start"
            android:hint="@string/phone_number"
            android:inputType="textPersonName"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/genderTextView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="bottom|start"
            android:text="@string/gender"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/genderGroup"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/genderMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/genderFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female"
                android:textSize="14sp" />
        </RadioGroup>

        <Button
            android:id="@+id/submitUserDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="submitUserDetails"
            android:text="@string/submit" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>