<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationFormGoogle">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/DOBGoogle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:gravity="bottom|start"
            android:hint="@string/dob_dd_mm_yy"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="bottom|start"
            android:text="@string/gender"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/genderGroupGoogle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/maleGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/femaleGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColorLink="@android:color/black"
                android:textSize="14sp" />
        </RadioGroup>
        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="submitUserDetails"
            android:text="@string/submit" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>